--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.5.4",
-    "web-vitals": "^1.0.1"
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
