--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^27.0.3",
+    "jest-environment-jsdom": "^27.0.23"
   },
   "scripts": {
     "start": "react-scripts start",
